styles/app.css
/* ... */
section[data-order-reversed="true"] :is(shiny-card, hunt-card, corbeille-card, friend-card) {
  --order-reversed: -1;
}

section[data-order="catchTime"] :is(shiny-card, hunt-card, corbeille-card, friend-card) {
  order: calc(-1 * var(--order-reversed) * var(--catchTime-order, 0));
}

section[data-order="shinyRate"] :is(shiny-card, hunt-card, corbeille-card, friend-card) {
  order: calc(-1 * var(--order-reversed) * var(--shinyRate-order, 0));
}

section[data-order="dexid"] :is(shiny-card, hunt-card, corbeille-card, friend-card) {
  order: calc(var(--order-reversed) * var(--dexid-order, 0));
}

section[data-order="species"] :is(shiny-card, hunt-card, corbeille-card, friend-card) {
  order: calc(var(--order-reversed) * var(--species-order, 0));
}

section[data-order="name"] :is(shiny-card, hunt-card, corbeille-card, friend-card) {
  order: calc(var(--order-reversed) * var(--name-order, 0));
}

section[data-order="game"] :is(shiny-card, hunt-card, corbeille-card, friend-card) {
  order: calc(-1 * var(--order-reversed) * var(--game-order, 0));
}

section[data-order="lastUpdate"] :is(shiny-card, hunt-card, corbeille-card, friend-card) {
  order: calc(-1 * var(--order-reversed) * var(--lastUpdate-order, 0));
}

section[data-order="creationTime"] :is(shiny-card, hunt-card, corbeille-card, friend-card) {
  order: calc(-1 * var(--order-reversed) * var(--creationTime-order, 0));
}

body:not([data-filters~="mes-chromatiques"]) filter-menu[section="mes-chromatiques"],
body:not([data-filters~="chasses-en-cours"]) filter-menu[section="chasses-en-cours"],
body:not([data-filters~="corbeille"]) filter-menu[section="corbeille"],
body:not([data-filters~="partage"]) filter-menu[section="partage"],
body:not([data-filters~="chromatiques-ami"]) filter-menu[section="chromatiques-ami"] {
  display: none;
}

#filter-menu {
  --from: 1rem;
}

filter-menu {
  margin-bottom: calc(var(--bottom-bar-height) + 8px);
}



/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!! PARAMÈTRES !!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

#parametres {
  min-height: 100%;
}

form[name="app-settings"],
#a-propos > .section-contenu {
  box-sizing: border-box;
  width: 100%;
  max-width: 65ch;
}

#parametres > .section-contenu,
#a-propos > .section-contenu {
  padding-inline: 16px;
}

h2:not(:first-child) {
  margin-top: 16px;
}

.un-parametre {
  display: grid;
  grid-template-columns: minmax(auto, 40ch) auto;
  grid-template-rows: 1fr [title] auto [description] var(--description-row) 1fr;
  --description-row: 0;
  column-gap: 16px;
  min-height: 32px;
  padding-block: 8px;
  text-align: left;
  align-items: center;
  container-type: inline-size;
}

.un-parametre.with-description {
  --description-row: auto;
}

.un-parametre.theme > .param {
  grid-template-columns: auto auto auto;
  gap: 8px;
}

.un-parametre + .un-parametre {
  margin-top: 0;
  border-top: 1px solid rgb(var(--outline-variant));
}

.un-parametre .param-nom,
.un-parametre .param-description {
  max-width: 40ch;
}

.param-nom {
  display: block;
  grid-row: title;
  grid-column: 1;
  color: rgb(var(--on-surface));
}

.param-description {
  grid-row: description;
  grid-column: 1;
  color: rgb(var(--on-surface-variant));
}

.param {
  align-self: start;
  display: grid;
  align-items: center;
  justify-content: end;
  min-width: 150px;
  min-height: calc(1.5rem + 1.25rem);
}

.un-parametre > label,
.un-parametre > input,
.un-parametre > input-switch,
.un-parametre > .param {
  grid-row: 1 / -1;
  grid-column: 2;
}

[data-action="check-update"] {
  margin: 0;
}

body:not([data-last-sync]) #parametres [data-last-sync],
body:not([data-last-sync="failure"]) #parametres [data-last-sync="failure"],
body:not([data-last-sync="success"]) #parametres [data-last-sync="success"],
body:not([data-last-sync="loading"]) #parametres [data-last-sync="loading"],
form[name="app-settings"]:not([data-public-profile="true"]) [data-public-profile] {
  display: none;
}

button > load-spinner {
  --size: 24px;
}

[data-sprites-progress]:empty {
  display: none;
}

[data-sprites-progress]:not(:empty)::before {
  content: '(';
}

[data-sprites-progress]:not(:empty)::after {
  content: ')';
}

#parametres[data-online-backup][data-last-sync=success] .success,
#parametres[data-online-backup][data-last-sync=failure] .failure {
  display: inline;
}

label[for="pick-import-file"],
#pick-import-file {
  width: .1px;
	height: .1px;
	opacity: 0;
	overflow: hidden;
	position: absolute;
	z-index: -1;
}

.un-parametre.theme input[type="radio"] + label {
  margin: 0;
}

input-slider[name="theme-hue"] {
  --block-size: var(--tap-safe-size);
  --inline-size: 80cqw;
  --thumb-width: 14px;
}

input-slider[name="theme-hue"]::part(slider-track) {
  --couleurs: white 0%, black 100%;
  background: var(--gradient, transparent);
  width: 100%;
  height: 100%;
  border: none;
  --border: none;
  outline: var(--border, none);
  border-radius: var(--border-radius);
}

input-slider[name="theme-hue"]::part(slider-thumb) {
  background: transparent;
  border: none;
  border-radius: var(--border-radius);
  box-shadow: inset 0 0 0 2px rgb(var(--on-surface)),
              0 0 0 2px rgb(var(--inverse-on-surface));
  outline-offset: 5px;
}

[data-value="current-account"] {
  color: rgb(var(--primary));
}



/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!! À PROPOS DU SHINYDEX !!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

.app-icon {
  display: flex;
  width: 120px;
  height: 120px;
  min-height: 120px;
  border-radius: 50%;
  overflow: hidden;
  margin: 0 auto;
  border: 1px solid rgb(var(--outline-variant));
}

.app-icon > svg {
  width: 120px;
  height: 120px;
  --background-top: rgb(var(--primary-60));
}

.lien-source {
  color: var(--accent-color);
}

.lien-source .material-icons {
  vertical-align: middle;
  margin-right: 4px;
}
/* ... */

